[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lubelogger-mcp"
version = "0.1.0"
description = "FastMCP stdio server for the LubeLogger API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "LubeLogger MCP contributors" }
]
keywords = ["lubelogger", "mcp", "fastmcp", "vehicle", "maintenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastmcp==3.3.1",
  "httpx>=0.28.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
lubelogger-mcp = "lubelogger_mcp.server:main"

[project.urls]
Homepage = "https://github.com/ngocleek/lubelogger-mcp"
Repository = "https://github.com/ngocleek/lubelogger-mcp"
Issues = "https://github.com/ngocleek/lubelogger-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lubelogger_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
